--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
-body {
+body { 
     display: flex;
-    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 3%;
 }
 
 #container {
-    
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+    padding: 10px;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
