--- a/style.css
+++ b/style.css
@@ -2,18 +2,32 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-left: 30%;
-    padding-right: 30%;
+    align-items: center;
     padding-top: 3%;
 }
 
-#container {
+.container {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
     margin-bottom: 20px;
-    padding: 10px;
-    background: white;
-    border: 1px solid #ccc;
+    padding: 2%;
     border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid black;
+    background-color: aliceblue;
+}
+
+.colorChoice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 5px 0;
+}
+
+input[type="radio"] {
+    transform: scale(1.2);
+    margin-right: 5px;
 }
