--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     border: 2px solid black;
     background-color: aliceblue;
+    width: 50%;
 }
 
 .colorChoice {
@@ -25,9 +26,4 @@ body {
     align-items: center;
     gap: 10px;
     margin: 5px 0;
-}
-
-input[type="radio"] {
-    transform: scale(1.2);
-    margin-right: 5px;
 }
